[gd_scene load_steps=3 format=3 uid="uid://csxcnafmcnc8j"]

[ext_resource type="Script" path="res://scripts/roundwin.gd" id="1_o7bkb"]
[ext_resource type="Script" path="res://scripts/round_end_score.gd" id="2_dqdaq"]

[node name="RoundWin" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o7bkb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 510.0
offset_top = 328.0
offset_right = 858.0
offset_bottom = 456.0
scale = Vector2(2.095, 2.095)

[node name="roundcomplete" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
text = "                         Round Completed!"
fit_content = true

[node name="Score" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
script = ExtResource("2_dqdaq")

[node name="start" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../quit")
focus_neighbor_bottom = NodePath("../options")
focus_next = NodePath("../options")
focus_previous = NodePath("../quit")
text = "CONTINUE"

[node name="options" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../start")
focus_neighbor_bottom = NodePath("../quit")
focus_next = NodePath("../quit")
focus_previous = NodePath("../start")
text = "OPTIONS"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../options")
focus_neighbor_bottom = NodePath("../start")
focus_next = NodePath("../start")
focus_previous = NodePath("../options")
text = "MENU"

[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
